metadata/unpackaged/objects/OLIS_Revenue_Insta__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Installment_Number__c</fullName>
        <externalId>true</externalId>
        <label>Installment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Margin_Amount__c</fullName>
        <label>Margin Amount</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Revenue_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLI Revenue Schedule</label>
        <referenceTo>OLIS__c</referenceTo>
        <relationshipLabel>OLIS Revenue Installments</relationshipLabel>
        <relationshipName>OLIS_Revenue_Installments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Amount__c</fullName>
        <label>Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <label>OLIS Revenue Installment</label>
    <nameField>
        <label>Installment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLIS Revenue Installments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>